Corrects minor alignment of circle

--- a/src/App.css
+++ b/src/App.css
@@ -334,7 +334,7 @@ body {
 .circled {
   z-index: 1;
   position: fixed;
-  top: 0px;
+  top: -2px;
   right: 150px;
   max-width: 80px;
 }
